Four_September_2021_CKA_Recap/12.Practice_labs/pod_with_multi_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - image: nginx
    name: alpha
  - image: busybox
    name: beta
    command: ["sleep", "4800"]
