Four_September_2021_CKA_Recap/12.Practice_labs/pod_with_secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-1401
  name: secret-1401
  namespace: admin1401
spec:
  containers:
  - command:
    - sleep
    args:
      - "4800"
    image: busybox
    name: secret-1401
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: "/etc/secret-volume"
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfiles-secret
